# Radeon-hackathon-2026-07

.github/workflows/: track2-genomic-agent.yml
Radeon-Cloud-User Guide/: README.md
submissions/Track_2_GenomicAgent/: Cargo.toml  RADEON_CLOUD_SETUP.md  RADEON_SETUP_WALKTHROUGH.md  README_PROFESSIONAL.md  setup.bat  setup.sh  showcase.html
submissions/Track_2_GenomicAgent/data/: README.md  real_1000genomes_chrMT_slice.vcf
submissions/Track_2_GenomicAgent/demo/: genomic_agent_demo.srt
submissions/Track_2_GenomicAgent/src/: agent.rs  bench.rs  bootstrap.rs  fst.rs  gpu_ld.rs  intent.rs  llm.rs  local_llm.rs  main.rs  pca.rs  rng.rs  tools.rs  vcf.rs
submissions/Track_2_GenomicAgent/src/shaders/: intent_similarity.wgsl  ld_r2.wgsl
