[package]
name = "genomic-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
wgpu = { version = "0.19", default-features = false, features = ["wgsl"] }
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
ureq = { version = "2", features = ["json", "tls"] }
serde_json = "1"
llama-cpp-2 = { version = "0.1.151", optional = true, features = ["vulkan"] }
encoding_rs = { version = "0.8", optional = true }

[features]
local-inference = ["dep:llama-cpp-2", "dep:encoding_rs"]

[[bin]]
name = "genomic-agent"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
